# community

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: main.ipynb
src/algorithms/: __init__.py  louvain.py
src/graph/: __init__.py  algorithms.py  models.py
